<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movieFilterGenreItem"
        android:title="@string/movie_filter_by_genre"
        android:orderInCategory="100"
        myapp:showAsAction="never"/>
    <item
        android:id="@+id/movieFilterReleaseDate"
        android:title="@string/movie_filter_by_release_date"
        android:orderInCategory="101"
        myapp:showAsAction="never"/>

    <item
        android:id="@+id/movieFilterRateItem"
        android:title="@string/movie_filter_by_rating"
        android:orderInCategory="102"
        myapp:showAsAction="never"/>

    <item
        android:id="@+id/movieFilterVoteCountItem"
        android:title="@string/movie_filter_by_vote_count"
        android:orderInCategory="103"
        myapp:showAsAction="never"/>

    <item
        android:id="@+id/movieFilterSortItem"
        android:title="@string/movie_sort_by"
        android:orderInCategory="104"
        myapp:showAsAction="never"/>
</menu>